@@ -9,8 +9,9 @@ AC_PROG_RANLIB
 AC_ISC_POSIX
 dnl Checks for libraries.
 AC_CHECK_LIB(z, deflate)
-AC_CHECK_LIB(png, png_create_read_struct)
 AC_CHECK_LIB(xml, xmlParseDocument)
+AC_CHECK_LIB(png, png_create_read_struct, PNG_LIBS="-lpng")
+AC_SUBST(PNG_LIBS)
 AM_PATH_GTK(1.2.0)
 AC_CHECK_LIB(GL, glClear, GL_LIBS="-lGL $GL_LIBS",, $GL_LIBS $GTK_LIBS)
 if test $ac_cv_lib_GL_glClear = no; then
