@@ -1,3 +1,9 @@
+2002-05-02  Kaz Sasayama  <Kaz.Sasayama@Hypercore.co.jp>
+
+	* programs/Makefile.am (rglclock_LDADD): Add $(PNG_LIBS).
+
+	* configure.in: Add PNG_LIBS for libpng.
+
 2002-05-01  Kaz Sasayama  <Kaz.Sasayama@Hypercore.co.jp>
 
 	* programs/main.cc (_GNU_SOURCE, _POSIX_C_SOURCE): New macro.
